# game-theory

./: CMakeLists.txt  LICENSE  README.md  chess_client_sockets.c  chess_server_sockets.c  new_chess.c  tic_tac_toe_10x10.c  tic_tac_toe_3x3.c
